--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "http://vincenttide.com/"
+baseurl = "http://vincenttide.github.io/"
 languageCode = "en-us"
 title = "Vincent Zhang"
 theme = "hugo-freelancer-theme"
