--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ theme = "hugo-freelancer-theme"
         # Copy your own image into './static/img/'' if you wish
         image = "profile.png"
         name = "Vincent Zhang"
-        subtitle = "Software Developer"
+        subtitle = "Software Engineer"
 
 
     [params.portfolio]
