--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "public"]
 	path = public
-	url = https://vincenttide@github.com/vincenttide/vincenttide.github.io.git
+	url = https://vincenttide@github.com/vincenttide/vincenttide.github.io
